--- a/extension/css/labels.css
+++ b/extension/css/labels.css
@@ -1,18 +1,23 @@
-span.hatespeech_label {
-    background-color: #c9e9f6;
+:root {
+    --color-dark: #0F95CC;
+    --color-light: #C9E9F6;
+}
+
+span.hatespeech_overlay {
+    background-color: var(--color-light);
     border-style: none solid;
     border-width: 2px;
-    border-color: #0F95CC;
+    border-color: var(--color-dark);
     padding: 0 3px;
     margin: 0 3px;
 }
 
 span.hatespeech_category {
-    color: #0F95CC;
+    color: var(--color-dark);
     vertical-align: top;
     font-size: 10px;
 }
 
 span.hatespeech_text {
-    color: #0F95CC;
+    color: var(--color-dark);
 }
