--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -1,5 +1,13 @@
+:root {
+    --color-darkest: #296B86;
+    --color-dark: #0F95CC;
+    --color-middle: #87CEEB;
+    --color-light: #C9E9F6;
+    --grey-dark: #C5C5C5;
+    --grey-light: #F5F5F5;
+}
+
 html {
-    display: block;
     margin: 0;
     padding: 0;
 }
@@ -23,7 +31,7 @@ img.icon {
 div.header {
     width: 100%;
     height: 60px;
-    background-color: #87CEEB;
+    background-color: var(--color-middle);
     display: flex;
     float: left;
     align-items: center;
@@ -32,17 +40,17 @@ div.header {
 div.header_tabs {
     width: 100%;
     height: 40px;
-    background-color: #F5F5F5;
+    background-color: var(--grey-light);
     display: flex;
     float: left;
     align-items: center;
     border-style: none none solid none;
     border-width: 2px;
-    border-color: #C5C5C5;
+    border-color: var(--grey-dark);
 }
 
 div.title {
-    color: #FFFFFF;
+    color: white;
     width: 100%;
     height: 40px;
     line-height: 40px;
