--- a/extension/css/overlays.css
+++ b/extension/css/overlays.css
@@ -3,7 +3,12 @@
     --color-light: #C9E9F6;
 }
 
-span.hatespeech_overlay {
+.hatespeech {
+    color: var(--color-dark);
+    display: inline-block;
+}
+
+.hatespeech-overlay {
     background-color: var(--color-light);
     border-style: none solid;
     border-width: 2px;
@@ -12,12 +17,11 @@ span.hatespeech_overlay {
     margin: 0 3px;
 }
 
-span.hatespeech_category {
-    color: var(--color-dark);
-    vertical-align: top;
-    font-size: 10px;
+.hatespeech-category {
+    align-content: center;
 }
 
-span.hatespeech_text {
-    color: var(--color-dark);
+.hatespeech-label {
+    vertical-align: top;
+    font-size: 10px;
 }
