--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -24,11 +24,8 @@ html {
     padding: 0;
 }
 
-img.icon {
-    margin: 15px;
-}
-
-div.header {
+/* ---------------- NAVIGATION ---------------- */
+.header {
     width: 100%;
     height: 60px;
     background-color: var(--color-middle);
@@ -37,22 +34,73 @@ div.header {
     align-items: center;
 }
 
-div.header_tabs {
-    width: 100%;
-    height: 40px;
-    background-color: var(--grey-light);
-    display: flex;
-    float: left;
-    align-items: center;
-    border-style: none none solid none;
-    border-width: 2px;
-    border-color: var(--grey-dark);
+.icon {
+    margin: 15px;
 }
 
-div.title {
+.title {
     color: white;
     width: 100%;
     height: 40px;
     line-height: 40px;
     font-size: 26px;
 }
+
+.nav {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    float: left;
+    align-items: center;
+}
+
+.nav_filler {
+    background-color: var(--grey-light);
+    border-style: none none solid none;
+    border-width: 2px;
+    border-color: var(--grey-dark);
+}
+
+.nav_element {
+    height: 18px;
+    max-width: 120px;
+    padding: 10px 15px;
+    vertical-align: middle;
+    align-content: center;
+    text-transform: capitalize;
+    font-size: 16px;
+    color: var(--grey-dark);
+    background-color: var(--grey-light);
+    border-style: none none solid none;
+    border-width: 2px;
+    border-color: var(--grey-dark);
+}
+
+.nav_element_selected {
+    background-color: var(--color-light);
+    color: var(--color-dark);
+    border-color: var(--color-dark);
+}
+
+.horizontal_spacer {
+    width: 100%;
+    max-width: 100%;
+}
+
+/* ---------------- CONTENT ---------------- */
+.content {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 100px;
+}
+
+.page {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+}
+
